--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,12 @@
+blinker==1.4
 certifi==2021.10.8
 charset-normalizer==2.0.12
 click==8.1.3
 colorama==0.4.4
 Flask==2.1.2
+Flask-Admin==1.6.0
+Flask-Login==0.6.1
+Flask-Mail==0.9.1
 Flask-SQLAlchemy==2.5.1
 greenlet==1.1.2
 gunicorn==20.1.0
@@ -16,4 +20,5 @@ requests==2.27.1
 SQLAlchemy==1.4.36
 urllib3==1.26.9
 Werkzeug==2.1.2
+WTForms==3.0.1
 zipp==3.8.0
