ver 0.27 (gitignore list added)

--- a/.gitignore
+++ b/.gitignore
@@ -274,3 +274,14 @@ $RECYCLE.BIN/
 
 # Windows shortcuts
 *.lnk
+
+.Python
+[Bb]in
+[Ii]nclude
+[Ll]ib
+[Ll]ib64
+[Ll]ocal
+[Ss]cripts
+pyvenv.cfg
+.venv
+pip-selfcheck.json
