--- a/requirements.txt
+++ b/requirements.txt
@@ -1,24 +1,38 @@
+awsebcli==3.20.3
 blinker==1.4
+botocore==1.23.54
+cement==2.8.2
 certifi==2021.10.8
 charset-normalizer==2.0.12
 click==8.1.3
-colorama==0.4.4
+colorama==0.4.3
 Flask==2.1.2
 Flask-Admin==1.6.0
 Flask-Login==0.6.1
 Flask-Mail==0.9.1
 Flask-SQLAlchemy==2.5.1
+future==0.16.0
 greenlet==1.1.2
 gunicorn==20.1.0
 idna==3.3
 importlib-metadata==4.11.3
 itsdangerous==2.1.2
 Jinja2==3.1.2
+jmespath==0.10.0
 MarkupSafe==2.1.1
+pathspec==0.9.0
 psycopg2==2.9.3
-requests==2.27.1
+pypiwin32==223
+python-dateutil==2.8.2
+pywin32==304
+PyYAML==5.4.1
+requests==2.26.0
+semantic-version==2.8.5
+six==1.14.0
 SQLAlchemy==1.4.36
+termcolor==1.1.0
 urllib3==1.26.9
+wcwidth==0.1.9
 Werkzeug==2.1.2
 WTForms==3.0.1
 zipp==3.8.0
