--- a/.ebextensions/venv.config
+++ b/.ebextensions/venv.config
@@ -2,4 +2,4 @@ option_settings:
   "aws:elasticbeanstalk:container:python":
     WSGIPath: application.py
   "aws:elasticbeanstalk:container:python:staticfiles":
-    "/static/": "application/static/" 
+    /static/: "static/"
