--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,14 @@
 blinker==1.4
 click==8.1.3
 colorama==0.4.5
+ez-setup==0.9
 Flask==2.1.2
 Flask-Admin==1.6.0
 Flask-Mail==0.9.1
 Flask-MySQLdb==1.0.1
 Flask-SQLAlchemy==2.5.1
 greenlet==1.1.2
+gunicorn==20.1.0
 importlib-metadata==4.11.4
 itsdangerous==2.1.2
 Jinja2==3.1.2
