--- a/requirements.txt
+++ b/requirements.txt
@@ -7,10 +7,15 @@ Flask-Mail==0.9.1
 Flask-MySQLdb==1.0.1
 Flask-SQLAlchemy==2.5.1
 greenlet==1.1.2
+gunicorn==20.1.0
 importlib-metadata==4.11.4
 itsdangerous==2.1.2
 Jinja2==3.1.2
 MarkupSafe==2.1.1
+mysql-connector-python==8.0.29
+mysqlclient==2.1.0
+protobuf==4.21.1
+PyMySQL==1.0.2
 python-dotenv==0.20.0
 SQLAlchemy==1.4.37
 validate-email==1.3
